--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,2 @@
-theme: jekyll-theme-cayman
-# Site
-repository: Git repository where your resume will be hosted, only required if you are hosting on GitHub (eg. sproogen/modern-resume-theme)
-# favicon: Directory of your favicon (eg. images/favicon.ico)(optional)
-
-# Content configuration version
-version: 2
+markdown:   kramdown
+style:  davewhipp
