--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,10 @@ version: 2
 
 # Personal info
 name: Your Name
-title: Porter Moody is an epic coder!!
-email: Your email (optional)
+title: Is there no Balm in Gilead?
+email: porterbmoody@gmail.com
 # email_title: Email (Email title override)
 phone: Your phone number (optional)
 # phone_title: Phone (Phone title override)
-website: Your website (eg. https://google.com)(optional)
+website: www.istherenobalmingilead.com
 # website_title: Web (Website title override)
