--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ version: 2
 
 # Personal info
 name: Porter
-title: Contact
+title: Is there no Balm in Gilead?
 email: porterbmoody@gmail.com
 # email_title: Email (Email title override)
 phone: Your phone number (optional)
