--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: minima
+theme: Architect theme
 # Site
 repository: Git repository where your resume will be hosted, only required if you are hosting on GitHub (eg. sproogen/modern-resume-theme)
 # favicon: Directory of your favicon (eg. images/favicon.ico)(optional)
