--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title:              Clean Blog
+title:              Is there no Balm in Gilead
 email:              porterbmoody@gmail.com
-description:        A Blog Theme by Start Bootstrap
-author:             Start Bootstrap
+description:        Religious Blog
+author:             P-Dawg
 baseurl:            "/startbootstrap-clean-blog-jekyll"
 url:                "https://startbootstrap.github.io"
 
