--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title:              Is there no Balm in Gilead
 email:              porterbmoody@gmail.com
 description:        Religious Blog
 author:             P-Dawg
-baseurl:            "/startbootstrap-clean-blog-jekyll"
-url:                "https://startbootstrap.github.io"
+baseurl:            "/startbootstrap-cleasn-blog-jekyll"
+url:                "https://porterbmoody.github.io"
 
 # Social Profiles
 twitter_username:   SBootstrap
