--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title:              Is there no Balm in Gilead
+title:              Is there no Balm in Gilead?
 email:              porterbmoody@gmail.com
-description:        Religious Blog
+description:        is there no physician there?
 author:             P-Dawg
 baseurl:            "/startbootstrap-cleasn-blog-jekyll"
 url:                "https://porterbmoody.github.io"
