--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:              Is there no Balm in Gilead?
 email:              porterbmoody@gmail.com
 description:        is there no physician there?
-author:             P-Dawg
+author:             Porter
 baseurl:            "/startbootstrap-cleasn-blog-jekyll"
 url:                "https://porterbmoody.github.io"
 
