--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@ baseurl:            "/startbootstrap-cleasn-blog-jekyll"
 url:                "https://porterbmoody.github.io"
 
 # Social Profiles
-twitter_username:   SBootstrap
-github_username:    StartBootstrap
-facebook_username:  StartBootstrap
-instagram_username:  
+twitter_username:   porter moody
+github_username:    porterbmoody
+facebook_username:  porter moody
+instagram_username:  porter___m
 linkedin_username:
 
 # Add your google-analytics ID here to activate google analytics
