--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url:                "https://porterbmoody.github.io"
 # Social Profiles
 twitter_username:   porter moody
 github_username:    porterbmoody
-facebook_username:  porter moody
+facebook_username:  porter.moody.33
 instagram_username:  porter___m
 linkedin_username:
 
