--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ baseurl:            "/startbootstrap-cleasn-blog-jekyll"
 url:                "https://porterbmoody.github.io"
 
 # Social Profiles
-twitter_username:   porter moody
+twitter_username:   portermoody3
 github_username:    porterbmoody
 facebook_username:  porter.moody.33
 instagram_username:  porter___m
