--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 title:              Is there no Balm in Gilead?
 email:              porterbmoody@gmail.com
 description:        is there no physician there?
-author:             p-dawg
-baseurl:            "/startbootstrap-cleasn-blog-jekyll"
+author:             porter
+baseurl:            "/porters awesomeness blog"
 url:                "https://porterbmoody.github.io"
 
 # Social Profiles
 twitter_username:   portermoody3
 github_username:    porterbmoody
 facebook_username:  porter.moody.33
-instagram_username:  porter___m
-linkedin_username:
+instagram_username: porter___m
+linkedin_username:  
 
 # Add your google-analytics ID here to activate google analytics
 google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
